# suppositions

./: .travis.yml  Cargo.toml  README.md  TODO.md  TODO.txt
.circleci/: config.yml
examples/: die-hard.rs
src/: data.rs  generators.rs  lib.rs  properties.rs  subrandom.rs
src/data/: mod.rs  shrinkers.rs  source.rs
src/generators/: collections.rs  composition.rs  core.rs  mod.rs  numbers.rs  tuples.rs
tests/: generators.rs  recursive.rs  smoketest.rs
