[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
license = "Apache-2.0"
name = "suppositions"
version = "0.1.4"
repository = "https://github.com/cstorey/suppositions"
documentation = "https://docs.rs/suppositions"
description = "Property testing with automagic shrinking."
readme = "README.md"

[dependencies]
log = "0.4.6"
hex-slice = "0.1.0"
rand = "0.7.2"
[dev-dependencies]
env_logger = "0.6.1"
[profile.release]
debug = true
